--- a/Impromptu/Impromptu/Impromptu.csproj
+++ b/Impromptu/Impromptu/Impromptu.csproj
@@ -33,45 +33,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DevExpress.CodeRush.Interop, Version=9.3.2.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d">
-      <SpecificVersion>False</SpecificVersion>
-    </Reference>
-    <Reference Include="DevExpress.DXCore.Controls, Version=9.3.2.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d">
-      <SpecificVersion>False</SpecificVersion>
-    </Reference>
-    <Reference Include="DevExpress.DXCore.Controls.Data.v6.3, Version=9.3.2.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d">
-      <SpecificVersion>False</SpecificVersion>
-    </Reference>
-    <Reference Include="DevExpress.DXCore.Controls.Utils.v6.3, Version=9.3.2.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d">
-      <SpecificVersion>False</SpecificVersion>
-    </Reference>
-    <Reference Include="DevExpress.DXCore.Controls.XtraBars.v6.3, Version=9.3.2.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d">
-      <SpecificVersion>False</SpecificVersion>
-    </Reference>
-    <Reference Include="DevExpress.DXCore.Controls.XtraEditors.v6.3, Version=9.3.2.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d">
-      <SpecificVersion>False</SpecificVersion>
-    </Reference>
-    <Reference Include="DevExpress.DXCore.Controls.XtraTreeList.v6.3, Version=9.3.2.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d">
-      <SpecificVersion>False</SpecificVersion>
-    </Reference>
-    <Reference Include="DevExpress.DXCore.Localization, Version=9.3.2.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d">
-      <SpecificVersion>False</SpecificVersion>
-    </Reference>
-    <Reference Include="Extensibility, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-    <Reference Include="Microsoft.VisualStudio.OLE.Interop, Version=7.1.40304.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-    <Reference Include="Microsoft.VisualStudio.Shell, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-    <Reference Include="Microsoft.VisualStudio.Shell.Interop, Version=7.1.40304.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-    <Reference Include="Microsoft.VisualStudio.Shell.Interop.8.0, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-    <Reference Include="Microsoft.VisualStudio.TextManager.Interop, Version=7.1.40304.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-    <Reference Include="Microsoft.VisualStudio.TextManager.Interop.8.0, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-    <Reference Include="stdole, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+    <Reference Include="DevExpress.DXCore.Platform, Version=10.1.5.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Design" />
-    <Reference Include="System.Runtime.Serialization.Formatters.Soap" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -89,7 +55,6 @@
     <Reference Include="DevExpress.CodeRush.PlugInCore" />
     <Reference Include="DevExpress.CodeRush.StructuralParser" />
     <Reference Include="DevExpress.CodeRush.VSCore" />
-    <Reference Include="VSLangProj, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ImpromptuOptions.cs">
@@ -105,9 +70,8 @@
       <DependentUpon>PlugIn1.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="SawBlade.ico" />
+    <Compile Include="RunMethodTileAdornment.cs" />
+    <Compile Include="RunMethodTileDocumentAdornment.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="ImpromptuOptions.resx">
@@ -116,6 +80,9 @@
     <EmbeddedResource Include="PlugIn1.resx">
       <DependentUpon>PlugIn1.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="RunMethod.png" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
